kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-test
  namespace: devops
  labels:
    app: backend-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-test
  template:
    metadata:
      labels:
        app: backend-test
    spec:
      containers:
      - name: backend-test
        image: localhost:8082/backend-test:cmd
        imagePullPolicy: Always
      imagePullSecrets:
      - name: docker-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: backend-test
  namespace: devops
  labels:
    app: backend-test
spec:
  selector:
    app: backend-test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend-devops
  namespace: devops
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: backend.devops.cl
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-test
            port:
              number: 80
  tls:
  - hosts:
    - backend.devops.cl
    secretName: backend-tls
